# django-vectordb

./: .gitignore  .pre-commit-config.yaml  404.html  CODEOWNERS  Makefile  README.md  index.html  mkdocs.yml  mypy.ini  pyproject.toml  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/workflows/: assign-pr.yaml  python-package.yml
docs/: index.md
docs/tutorial/: 1-project-setup.md  1.project-setup.md  2-adding-vector-search.md  3-automatically-updating-vector-database.md  4-manually-updating-vector-database.md  quickstart.md
example/blog/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
example/example/: settings.py  urls.py
examples/django-5/: README.md
scripts/: combine-coverage.sh  qa.sh  run-tox.sh
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/search/: search_index.json
tutorial/1-project-setup/: index.html
tutorial/2-adding-vector-search/: index.html
tutorial/3-automatically-updating-vector-database/: index.html
tutorial/3-manually-updating-vector-database/: index.html
tutorial/4-manually-updating-vector-database/: index.html
tutorial/5-automatic-syncing/: index.html
tutorial/5-vector-search/: index.html
tutorial/6-adding-api-endpoint/: index.html
tutorial/6-vector-search/: index.html
tutorial/7-adding-api-endpoint/: index.html
tutorial/blog/: apps.py  forms.py  models.py  urls.py  views.py
tutorial/quickstart/: index.html
tutorial/tutorial/: settings.py  urls.py
vectordb/: __init__.py  admin.py  apps.py  checks.py  embedding_functions.py  manager.py  models.py  queryset.py  serializers.py  settings.py  shortcuts.py  signals.py  sync_signals.py  tasks.py  urls.py  utils.py  validators.py  views.py
vectordb/ann/: __init__.py  abcz.py  indexes.py  singleton.py
vectordb/cohere/: embed.py
vectordb/migrations/: 0001_initial.py  0002_vector_created_at_vector_updated_at_and_more.py
vectordb/openai_embeddings/: README.md  __init__.py  prelease.py  release_v1.py
vectordb/tests/: __init__.py  apps.py  dummy_module.py  models.py  (+8 more)
(+34 files in other folders)
