[metadata]
name = django-vectordb
version = 0.1.3
description = Add extremely fast vector search to django with support for filtering and auto-sync through signals. Scalable to a billion vectors.
long_description = file: README.md
url = https://github.com/pkavumba/django-vectordb.git
author = Pride Kavumba
author_email = pkavumba@gmail.com
license = Apache License 2.0
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: Django
    Framework :: Django :: 3
    Framework :: Django :: 3.2
    Framework :: Django :: 4
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.7
install_requires =
    Django>=3.2
    hnswlib>=0.7.0
    numpy

[options.extras_require]
standard =
    sentence-transformers
    djangorestframework
    django-filter

dev =
    tox
    black
    django
    pytest
    pytest-django
    sentence-transformers
    djangorestframework
    django-filter
    mkdocs
    django-stubs
    pre-commit
    mkdocs-material

tests =
    pytest
    pytest-django
    sentence-transformers
    djangorestframework
    django-filter


[options.packages.find]
exclude =
    tests

[flake8]
exclude = venv/*,tox/*,docs/*,dist/*,build/*
max-line-length = 100
extend-ignore = E203, W503

[isort]
profile = black

[tool:pytest]
DJANGO_SETTINGS_MODULE = vectordb.tests.settings
testpaths = vectordb/tests
